Fixed setup read SELENIUM_HOST so no error if null Added Environet var to compose file to pass environment var form local env